test_sources = [  meson.project_source_root() + '/src/utils/cmdline.cc',
                            meson.project_source_root() + '/src/utils/freq-est.cc',
                            meson.project_source_root() + '/src/utils/nco.cc',
                            meson.project_source_root() + '/src/utils/loop-filter.cc',
                            meson.project_source_root() + '/src/blocks/carrier-sync.cc',
                            meson.project_source_root() + '/src/utils/rm_math.cc']


# subdir('sync')
subdir('conv')
# subdir('corr')
subdir('firfilt')
subdir('firinterp')
subdir('firdecim')
subdir('nco')
subdir('freq-est')
subdir('carrier-sync')

